<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layer_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tet_value_response"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="top|start"
                    android:hint="@string/response_value"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minEms="10"
                    android:minLines="5"
                    android:textSize="@dimen/text_size_normal"
                    android:transformPivotX="@dimen/default_margin_half_minus"
                    android:transformPivotY="@dimen/default_margin_half" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_margin_half"
                android:paddingTop="@dimen/default_margin_half"
                android:text="@string/image_response"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_camera"
                    style="@style/ButtonPrimaryOutline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableLeft="@drawable/ic_from_camera"
                    android:drawableStart="@drawable/ic_from_camera"
                    android:padding="@dimen/default_margin_half" />

                <View
                    android:layout_width="@dimen/default_margin"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/btn_gallery"
                    style="@style/ButtonPrimaryOutline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableLeft="@drawable/ic_from_gallery"
                    android:drawableStart="@drawable/ic_from_gallery"
                    android:padding="@dimen/default_margin_half" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_response"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen150"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_send_response"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/send_response" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>