<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layer_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ps.petugas.salam.wakatobi.widget.RoundedImageView
                android:id="@+id/iv_profile_newest"
                android:layout_width="@dimen/dimen50"
                android:layout_height="@dimen/dimen50"
                android:layout_margin="@dimen/default_margin_half"
                android:src="@drawable/ic_default_profile" />

            <TextView
                android:id="@+id/tv_username_newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_half"
                android:layout_toRightOf="@+id/iv_profile_newest"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_title_report_newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_username_newest"
                android:layout_toRightOf="@+id/iv_profile_newest" />

            <TextView
                android:id="@+id/tv_date_report_newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/default_margin_half"
                android:drawableLeft="@drawable/ic_calendar"
                android:drawablePadding="@dimen/default_margin_half"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:id="@+id/ll_3_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_profile_newest"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/default_margin_half"
                    android:drawableTop="@drawable/ic_car"
                    android:gravity="center"
                    android:text="@string/sample"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/default_margin_half"
                    android:drawableTop="@drawable/ic_distance"
                    android:gravity="center"
                    android:text="@string/sample"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tv_call_reporter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/default_margin_half"
                    android:drawableTop="@drawable/ic_phone"
                    android:gravity="center"
                    android:text="@string/call_reporter"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_image_report"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen180"
                android:layout_below="@+id/ll_3_button"
                android:layout_marginTop="@dimen/default_margin_half">

                <ImageView
                    android:id="@+id/iv_image_report_newest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black_trans80"
                    android:scaleType="centerCrop" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/dimen40"
                    android:layout_height="@dimen/dimen40"
                    android:layout_centerInParent="true"
                    android:indeterminateDrawable="@drawable/progressbar" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_image_report"
                android:layout_margin="@dimen/default_margin_half"
                android:gravity="center" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1"
                android:layout_below="@+id/tv_area"
                android:layout_marginTop="@dimen/default_margin_half"
                android:background="@color/backgroundColor" />

            <TextView
                android:id="@+id/tv_desc_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider1"
                android:layout_margin="@dimen/default_margin_half"
                android:gravity="center" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1"
                android:layout_below="@+id/tv_desc_report"
                android:layout_marginTop="@dimen/default_margin_half"
                android:background="@color/backgroundColor" />

            <LinearLayout
                android:id="@+id/ll_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider2"
                android:layout_margin="@dimen/default_margin_half"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_kategori_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_kategori_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_format" />
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1"
                android:layout_below="@+id/ll_category"
                android:layout_marginTop="@dimen/default_margin_half"
                android:background="@color/backgroundColor" />

            <TextView
                android:id="@+id/tv_verification_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider3"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/default_margin_half"
                android:gravity="center"
                android:text="@string/see_location" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1"
                android:layout_below="@+id/tv_verification_date"
                android:layout_marginTop="@dimen/default_margin_half"
                android:background="@color/backgroundColor" />

            <TextView
                android:id="@+id/tv_see_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider4"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/default_margin_half"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="@dimen/default_margin_half"
                android:gravity="center"
                android:text="@string/see_location" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1"
                android:layout_below="@+id/tv_see_location"
                android:layout_marginTop="@dimen/default_margin_half"
                android:background="@color/backgroundColor" />

            <LinearLayout
                android:id="@+id/ll_poin_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider5"
                android:layout_margin="@dimen/default_margin_half"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/dimen60"
                    android:layout_height="@dimen/dimen60"
                    android:src="@drawable/ic_medal_blue" />

                <TextView
                    android:id="@+id/tv_total_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin_half"
                    android:text="@string/sample"
                    android:textSize="@dimen/text_size_extra_large" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_accept_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider5"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/default_margin_half"
                android:background="@drawable/bg_round_green"
                android:orientation="vertical"
                android:paddingBottom="@dimen/default_margin"
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin"
                android:paddingTop="@dimen/default_margin">

                <ImageView
                    android:layout_width="@dimen/dimen30"
                    android:layout_height="@dimen/dimen30"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_check_detail_laporan" />

                <TextView
                    android:id="@+id/tv_message_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin_half"
                    android:gravity="center"
                    android:text="@string/accept_report_n"
                    android:textColor="@color/green" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>